# remotechargeport

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md  dependencies.yaml
config/: cb-chargecontrolc-agent.yaml  cb-chargecontrolc-controller-dual-ocpp16.yaml  cb-chargesom-agent.yaml  cb-chargesom-controller-dual-ocpp16.yaml
interfaces/: satellite.yaml
licenses/opensource.org/license/: gpl-3-0
modules/: CMakeLists.txt
modules/SatelliteAgent/: CMakeLists.txt  SatelliteAgent.cpp  SatelliteAgent.hpp  VERSION.in  manifest.yaml
modules/SatelliteAgent/auth/: authImpl.cpp  authImpl.hpp
modules/SatelliteAgent/system/: systemImpl.cpp  systemImpl.hpp
modules/SatelliteController/: CMakeLists.txt  SatelliteController.cpp  SatelliteController.hpp  manifest.yaml
modules/SatelliteController/auth_token_provider/: auth_token_providerImpl.cpp  auth_token_providerImpl.hpp
modules/SatelliteController/dc_external_derate/: dc_external_derateImpl.cpp  dc_external_derateImpl.hpp
modules/SatelliteController/display_message/: display_messageImpl.cpp  display_messageImpl.hpp
modules/SatelliteController/energy/: energyImpl.cpp  energyImpl.hpp
modules/SatelliteController/evse_manager/: evse_managerImpl.cpp  evse_managerImpl.hpp
modules/SatelliteController/iso15118_extensions/: iso15118_extensionsImpl.cpp  iso15118_extensionsImpl.hpp
modules/SatelliteController/system/: systemImpl.cpp  (+1 more)
modules/SystemAggregator/: CMakeLists.txt  SystemAggregator.cpp  SystemAggregator.hpp  configuration.h.in  logs_upload_helper.sh  manifest.yaml  systemaggregator_upload_log_request.hpp
(+10 files in other folders)
